--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,16 @@
 
     --dark-color: #333;
     --border-radius: .3rem;
+    --border-color: #d2daea;
 }
 body {
     color: var(--primary-color);
     background-color: #fff; 
     font-weight: 400;
     font-family: 'Roboto', sans-serif;
+}
+.header {
+    background-color: #e7ebf4;
 }
 .btn-primary {
     background-color: var(--primary-color);
@@ -28,9 +32,26 @@ body {
     max-width: 250px;
 }
 
-.navbar-cart {
-    font-size: 1.5rem;
-    color: var(--dark-color);
+.navbar-cart span {
+    color: #fff;
+    font-size: .8rem;
+    font-weight: 400;
+    width: 25px;
+    height: 25px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.navbar-cart a {
+    font-size: 2rem;
+    color: var(--primary-color);
+    text-decoration: none;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    text-align: center;
 }
 
 /* Pokemon Card */
@@ -38,21 +59,21 @@ body {
 .pokemon-card {
     padding: 1rem;
     margin: 1rem;
-    background-color: var(--primary-color);
+    border: 1px solid var(--border-color);
+    box-shadow: 3px 1px 6px var(--border-color);
     border-radius: var(--border-radius);
 }
 .pokemon-card-content {
     border-radius: var(--border-radius);
 }
 .pokemon-card-header {
-    background-color: var(--primary-color);
-    color: #fff;
+    color: var(--primary-color);
 }
-
 .pokemon-card-header h2 {
     text-transform: capitalize;
-    font-weight: 100;
-    font-size: 1.2rem;
+    font-weight: 600;
+    font-size: 1.3rem;
+    text-align: center;
 }
 .pokemon-card-body {
     background-color: #fff;
@@ -61,11 +82,10 @@ body {
 }
 .pokemon-card-footer {
     background-color: #fff;
-    padding: .5rem;
+    padding: 0;
     font-size: 2rem;
     color: var(--dark-color);
     text-align: center;
-    
 }
 
 /* Cart */
@@ -81,8 +101,11 @@ body {
     padding-left: 0;
 }
 .cart ul li {
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid var(--border-color);
     padding: .5rem 0;
+    align-items: center;
+    justify-content: space-between;
+    display: flex;
 }
 .cart ul li:last-child{
     border-bottom: none;
@@ -94,10 +117,27 @@ body {
 .cart .total {
     text-transform: uppercase;
     font-weight: bold;
+    margin-top: 1rem;
+}
+.cart img {
+    max-height: 70px;
+    margin-right: 10px;
+}
+.cart button {
+    font-size: 1.2rem;
 }
 
 /* Search */ 
 
-.search input {
-    margin-left: 1rem;
+.search .search-content {
+    margin: 0;
+}
+.search .form-control {
+    border-color: var(--border-color);
+}
+
+/* Pagination */
+
+.pagination {
+    margin: 2rem 0;
 }
