--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,7 @@ body {
     text-decoration: none;
     display: flex;
     align-items: flex-start;
-    justify-content: space-between;
+    justify-content: center;
     text-align: center;
     background-color: transparent;
     border: none;
